force-app/main/default/objects/Cluster_Unit__c/Cluster_Unit__c.object-meta.xml
<CustomObject>
    <description>To register a cluster of units</description>
    <label>Cluster Eenheid</label>
    <nameField>
        <displayFormat>CU-{000000000}</displayFormat>
        <label>Cluster Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Eenheden</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>