force-app/main/default/objects/Cluster_Unit__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Cluster this Cluster Unit refers to</description>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipName>Cluster_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>