force-app/main/default/objects/Cluster_Unit__c/fields/Contract_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>To register the Contract Unit this Cluster Unit refers to</description>
    <inlineHelpText>To register the Contract Unit this Cluster Unit refers to</inlineHelpText>
    <label>Contract Unit</label>
    <referenceTo>Contract_Unit__c</referenceTo>
    <relationshipName>Cluster_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>