force-app/main/default/objects/Cluster_Unit__c/listViews/All_Cluster_Units.listView-meta.xml
<ListView>
    <fullName>All_Cluster_Units</fullName>
    <columns>NAME</columns>
    <columns>Cluster__c</columns>
    <columns>Contract_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Cluster Eenheden</label>
</ListView>